[project]
name = "gforce_sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Bernhard Specht", email = "bernhard.specht@myelinh.com"},
]
dependencies = [
    "bleak>=0.20.2",
    "numpy>=1.25.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
